fixed jumpy editor section for action drawer toggle

--- a/src/apps/content-editor/src/app/views/ItemEdit/Content/Content.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Content/Content.less
@@ -28,6 +28,8 @@
       flex: 2;
       padding: 0;
       height: @height;
+      //100vw - globalsidbar - contentNav collapsed - actionsDrawerBtn - padding
+      width: calc(100vw - 60px - 60px - 42px - 32px);
       overflow: auto;
       //Hide Scrollbar
       ::-webkit-scrollbar {
